Employee Inbox UI alignment  issue

--- a/web/rainmaker/packages/employee/src/modules/employee/Inbox/components/Table/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/Inbox/components/Table/index.scss
@@ -26,6 +26,10 @@
   padding-top: 3px;
 }
 
+
+
+
+
 .inbox-data-table-headcell {
   color: rgba(0, 0, 0, 0.87) !important;
   font-size: 14px !important;
@@ -120,7 +124,7 @@
 
 .inbox-module-container {
   display: flex;
-  padding: 0px 30px;
+  padding: 0px 15px;
 }
 
 .inbox-taskboard-subtext {
